<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMainBackround">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/add_vocabulary_title"
        android:textSize="20dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleText"
        android:ems="10"
        android:id="@+id/newVocName"
        android:inputType="textAutoCorrect"
        android:contentDescription="Name"
        android:hint="@string/add_vocabulary_name_description" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginLeft="4dp"
        android:gravity="center_vertical"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/newVocName"
        android:text="@string/add_vocabulary_public" />


    <android.support.v7.widget.SwitchCompat
        android:id="@+id/switch_upload"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:layout_alignParentRight="true"
        android:layout_below="@id/newVocName"
        android:checked="true" />

    <RelativeLayout
        android:id="@+id/bottomBar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:elevation="4dp">

        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:text="@string/add_vocabulary_previous_step" />

        <Button
            android:id="@+id/createButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@null"
            android:text="@string/add_vocabulary_create" />

    </RelativeLayout>

</RelativeLayout>