<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/edit_item_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EditItemActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgWord"
        android:layout_centerInParent="true"
        android:layout_above="@+id/lblWordDescription"
        android:transitionName="@string/transition_edit_item_image"
        android:paddingBottom="12dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/what_is_this"
        android:id="@+id/lblWordDescription"
        android:layout_above="@+id/txtWord"
        android:gravity="center" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtWord"
        android:transitionName="@string/transition_edit_item_name"
        android:layout_alignParentBottom="true"
        android:inputType="textAutoCorrect|textCapSentences"
        android:imeOptions="actionDone"/>

</RelativeLayout>
